--- a/nexora-crypto-dashboard/webapp/src/index.html
+++ b/nexora-crypto-dashboard/webapp/src/index.html
@@ -8,6 +8,8 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+  <h1>Hello World !</h1>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic eligendi, atque eos ipsum reiciendis dolorem placeat ea minus quasi accusantium architecto. Consequuntur hic ea est iste, pariatur praesentium perspiciatis cumque!</p>
+  <button style="background-color: rgb(134, 156, 93); size: 10px; cursor: pointer;"><a href="https://www.google.com/" target="_blank">Click me ! </a></button>
 </body>
 </html>
