--- a/nexora-crypto-dashboard/webapps/dashboard/src/index.html
+++ b/nexora-crypto-dashboard/webapps/dashboard/src/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>NEXORA</title>
+  <title>Nexora - plateforme pour simulation de cryptomonnaie</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- <link rel="icon" type="image/x-icon" href="favicon.ico"> -->
+  <link rel="icon" type="image/png" href="assets/logoLight-png.png">
 </head>
 <body>
   <app-root></app-root>
